@@ -1,3 +1,8 @@
+2001-05-04  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettext.m4 (AM_WITH_NLS): Let the GNU gettext package install its
+	libintl when a GNU libintl is already preinstalled.
+
 2001-04-30  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext.m4 (AM_GNU_GETTEXT): Also check for the getegid, geteuid,
